3단계 - 로또(2등) (#3871)
* refactor 24.10.13 syb 피드백반영

* feat 24.10.13 syb 2등 로또 생성

* feat 24.10.13 syb 2등 로또 당첨

* refactor 24.10.13 syb 랜덤 로또 번호 생성 분리

* refactor 24.10.13 syb 로또에서 로또번호 나눔

* refactor 24.10.14 피드백 반영

* refactor 24.10.14 테스트 수정

* refactor 24.10.14 Lotto integer로 하였을 때 list로 만들어서 가능하게 함

* refactor 24.10.14 Lotto 2등 계산 LottoRank로 책임 바꿈

* refactor 24.10.14 LottoRank 계산 Lotto에서 WinningLotto로 변경

* docs 24.10.14 리팩토링에 따른 요구사항 위치 변경