@@ -1,16 +1,13 @@
 package lotto.domain;
 
-import lotto.domain.Lotto;
-import org.junit.jupiter.api.DisplayName;
-import org.junit.jupiter.api.Test;
-
-import java.util.*;
-
-import static lotto.domain.Lotto.IS_NOT_LOTTO_SIZE;
-import static lotto.domain.LottoRank.FOURTH;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
-import static org.junit.jupiter.api.Assertions.assertAll;
+
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Test;
 
 class LottoTest {
     @DisplayName("로또 발행시 로또 번호가 6개가 아닌 경우 에러")
@@ -19,35 +16,34 @@ class LottoTest {
         List<Integer> lottoNumbers = new ArrayList<>(Arrays.asList(1, 3, 5, 7, 9));
         assertThatThrownBy(() -> {
             new Lotto(lottoNumbers);
-        }).isInstanceOf(IllegalArgumentException.class)
-                .hasMessageContaining(IS_NOT_LOTTO_SIZE);
+        }).isInstanceOf(IllegalArgumentException.class);
     }
 
     @DisplayName("로또 번호 정렬")
     @Test
     void 로또번호_정렬() {
-        List<Integer> lottoNumbers = new ArrayList<>(Arrays.asList(1, 11, 8, 5, 7, 9));
-        Lotto lotto = new Lotto(lottoNumbers);
-        List<Integer> lottoList = lotto.getLottoNumbers();
-        assertThat(lottoList).isEqualTo(List.of(1, 5, 7, 8, 9, 11));
+        List<Integer> numbers = new ArrayList<>(Arrays.asList(1, 11, 8, 5, 7, 9));
+        Lotto lotto = new Lotto(numbers);
+        assertThat(lotto).isEqualTo(new Lotto(1, 5, 7, 8, 9, 11));
     }
 
-    @DisplayName("로또등수")
+    @DisplayName("보너스 번호 일치 여부 확인")
     @Test
-    void 로또등수() {
-        List<Integer> lottoNumbers = new ArrayList<>(Arrays.asList(1, 5, 7, 8, 9, 11));
-        Lotto lotto = new Lotto(lottoNumbers);
-        List<Integer> winningLottoNumbers = new ArrayList<>(Arrays.asList(1, 3, 5, 7, 9, 10));
-        Lotto winningLotto = new Lotto(winningLottoNumbers);
-        assertThat(lotto.getLottoResult(winningLotto)).isEqualTo(FOURTH);
+    void 보너스_번호_일치_확인() {
+        List<Integer> numbers = new ArrayList<>(Arrays.asList(1, 2, 3, 4, 5, 7));
+        Lotto lotto = new Lotto(numbers);
+        int bonusNumber = 7;
+        assertThat(lotto.isNumberContain(bonusNumber)).isTrue();
     }
 
-    @DisplayName("당첨 로또 생성")
+
+    @DisplayName("중복 번호 있을 시 에러")
     @Test
-    void 당첨로또() {
-        String[] winning = {"1","2","6","4","5","3"};
-        Lotto lotto = new Lotto(winning);
-        List<Integer> lottoList = lotto.getLottoNumbers();
-        assertThat(lottoList).isEqualTo(List.of(1, 2, 3, 4, 5, 6));
+    void 중복_에러() {
+        List<Integer> numbers = new ArrayList<>(Arrays.asList(1, 2, 3, 4, 5, 7));
+        Lotto lotto = new Lotto(numbers);
+        assertThatThrownBy(() -> {
+            lotto.validateDuplicate(1);
+        }).isInstanceOf(IllegalArgumentException.class);
     }
 }
